# python-chat-archive

./: Dockerfile  README.rst  pyproject.toml
.github/workflows/: images.yaml
chat_archive/: __init__.py  cli.py  database.py  emoji.py  models.py  tests.py  utils.py
chat_archive/alembic/: env.py
chat_archive/backends/: __init__.py  gtalk.py  hangouts.py  slack.py  telegram.py
chat_archive/html/: __init__.py  redirects.py
docs/: conf.py
